<resources>
    <string name="app_name">ExpressAssistant</string>

    <string name="title_activity_main">mainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tab_btn_rob_order">Get Order</string>
    <string name="tab_btn_history_order">History</string>
    <string name="tab_btn_my_wallet">My Wallet</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">ExpressAssistant</string>
    <string name="login_title">SQB Delivery Client</string>
    <string name="login_user">username</string>
    <string name="login_pwd">password</string>
    <string name="login_btn_login">Login</string>
    <string name="login_tv_register"><u>Register&gt;&gt;</u></string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_remember">Remember?</string>
    <string name="title_activity_registration">registrationActivity</string>

    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>

    <string name="registration_title">Request Registration</string>
    <string name="registration_usr">Username:</string>
    <string name="registration_pwd">Password:</string>
    <string name="registration_name">Real Name:</string>
    <string name="registration_id">Identifier:</string>
    <string name="registration_mobile">Mobile:</string>
    <string name="registration_passcode">Passcode:</string>
    <string name="registration_addr">Full Address:</string>
    <string name="registration_photo_placeholder">Full face photo with ID card in hand</string>
    <string name="registration_pick_photo">Pick Photo</string>
    <string name="registration_get_passcode">Get Passcode</string>
    <string name="registration_accept_license">I have read and agree to the</string>
    <string name="registration_license"><u>[Agreement]</u></string>
    <string name="tab_btn_rest">Take Rest</string>
    <string name="searching_waiting_for_order">Waiting for the order !</string>
    <string name="searching_hint">Hint:</string>
    <string name="searching_hint_content">Click "Get Order" to get the order nearby.</string>
    <string name="title_activity_login_failed">loginFailedActivity</string>
    <string name="login_failed_title">Login Failed</string>
    <string name="login_failed_info">Your account or password is not corrent, you need to</string>
    <string name="login_failed_btn_re_login">Try Again</string>
    <string name="title_activity_registration_agreement">registrationAgreementActivity</string>
    <string name="registration_agreement">Agreement</string>
    <string name="history_title">My Historical Orders</string>
    <string name="history_done">Done</string>
    <string name="wallet_recent_reward">Recent Income:</string>
    <string name="wallet_total_reward">Total Income:</string>
    <string name="wallet_unsettled_reward">Unsettled Income:</string>
    <string name="unit_yuan">RMB</string>
    <string name="wallet_id">ID:</string>
    <string name="wallet_pass_registration">registered</string>
    <string name="history_list_time">Time:</string>
    <string name="history_list_distance">Distance:</string>
    <string name="history_list_reward">Reward:</string>
    <string name="history_list_km">km</string>
    <string name="history_details_goto">Goto</string>
    <string name="history_details_get_order_time">Order Got</string>
    <string name="history_details_take_delivery">Delivery Taken</string>
    <string name="history_details_Delivered">Delivered</string>
    <string name="history_details_unit_mins_later">mins</string>
    <string name="history_details_duration">Duration:</string>
    <string name="history_details_income">Income:</string>
    <string name="unit_minute">mins</string>
    <string name="order_got_title">Delivery Task</string>
    <string name="order_got_info">SQB platform has assigned you a delivery task, go and</string>
    <string name="order_got_see_details">See Details</string>
    <string name="order_got_hint">Please confirm the task as soon as possible, if you failed to confirm within 5 minutes, the system will assgin it to others and you will lose your rank in the system.</string>
    <string name="order_processbar_confirm">Confirm</string>
    <string name="order_processbar_take_delivery">Take</string>
    <string name="order_processbar_deliver">Deliver</string>
    <string name="order_processbar_done">Finish</string>
    <string name="order_confirm_hint">Hint: Cancel the task will affect your rank in the system!</string>
    <string name="order_confirm_btn_confirm">Confirm</string>
    <string name="order_confirm_btn_cancel">Cancel</string>
    <string name="order_take_order_checked">I have checked the items</string>
    <string name="order_take_confirm_taken">Confirm Taken</string>
    <string name="order_deliver_confirm_delivered">Confirm Delivered</string>
    <string name="order_finish_hint_content">You have to ask for the <b>DELIVERY CODE</b> from the consignee, you cannot finish this task without the <b>DELIVERY CODE</b></string>
    <string name="order_finish_confirm">OK</string>
    <string name="order_finish_title">Input the DELIVERY CODE to complete this task.</string>
    <string name="order_finish_delivery_code">Delivery Code:</string>
    <string name="order_done_balance">Got</string>
    <string name="order_done_text">You can see all the income in </string>
    <string name="order_done_continue">Continue</string>
    <string name="order_done_hint_content">SQB platform will turn your income into cash on 7th, 14th, 21th and 28th every month</string>
    <string name="reg_success">register success</string>
    <string name="reg_success_sub">Your information has recieved</string>
    <string name="reg_success_sub_2">please wait for system check</string>
    <string name="btn_quit">quit</string>
    <string name="reg_success_sub_3">Please wait for our call</string>
    <string name="validFailed">Verify Code Failure</string>
    <string name="validFailed_txt">please re-enter the code</string>
    <string name="reValide">Re enter</string>
    <string name="intent_call">Call</string>
    <string name="dialog_confirm_exit">Quit?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_title_info">Information</string>
    <string name="dialog_dial">Make a dial</string>
    <string name="registration_province">Choose Province</string>
    <string name="registration_city">Choose City</string>
    <string name="registration_district">Choose District</string>
    <string name="registration_district_selection">District Selection:</string>
    <string name="dialog_open_map">Open Map</string>
    <string name="dialog_map_no_map">Cannot detect one of these application installed: [ Baidu Map | Gaode Map ]. Please install them at first.</string>
    <string name="dialog_hint">Oke Hint</string>
    <string name="registration_district_province">Province</string>
    <string name="registration_district_city">City</string>
    <string name="registration_district_district">District</string>
    <string name="registration_gender">Gender:</string>
    <string name="registration_select_gender">Select Gender</string>
    <string name="gender_male">male</string>
    <string name="gender_female">Female</string>
    <string name="searching_locate_failed">Failed to get current location, cannot get the orders at this time !</string>
    <string name="order_finish_sn">SN:</string>
</resources>
