<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="13"
        android:layout_marginTop="30dp">
        <ImageView
            android:id="@+id/iv_order_got_circle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/login_failed_circle"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/reg_success"
                android:textSize="40sp"
                android:textColor="@color/font_blue"
                />
            <TextView
                android:id="@+id/tv_order_got_info"
                android:layout_width="200dp"
                android:paddingTop="20dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/reg_success_sub"
                android:textSize="16sp"/>
            <Button
                android:id="@+id/btn_registration_success_quit"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_quit"
                android:textColor="@color/font_white"
                android:background="@drawable/button_blue_selector"
                android:textSize="20sp"
                />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_order_got_hint"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/font_white"
            android:text="@string/searching_hint"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/tv_searching_hint_content"
            android:layout_below="@id/tv_order_got_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_white"
            android:text="@string/reg_success_sub_3"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            />
    </RelativeLayout>
</LinearLayout>