<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_order_input_valid_again"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="13"
        android:layout_marginTop="15dp">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/login_failed_circle"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="bottom"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/validFailed"
                    android:textSize="20sp"
                    android:textColor="@color/font_blue"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="230dp"
                android:paddingTop="20dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/validFailed_txt"
                android:textSize="12sp"
                android:textColor="@color/font_black"
                />
            <Button
                android:id="@+id/btn_order_re_valide"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/reValide"
                android:textColor="@color/font_white"
                android:background="@drawable/button_blue_selector"
                android:textSize="20sp"
                />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_order_input_valid"
        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="13">
        <ImageView
            android:id="@+id/iv_order_got_circle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/login_failed_circle"/>
            <TextView
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/tv_order_finish_sn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/order_finish_title"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/font_black"/>
            <TextView
                android:id="@+id/tv_order_finish_sn"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/tv_order_finish_inputbox"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/order_finish_sn"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/font_black"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/tv_order_finish_inputbox"
                android:layout_width="fill_parent"
                android:padding="8dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/bg_white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/order_finish_delivery_code"
                    android:textSize="15sp"
                    android:textColor="@color/font_grey"/>
                <EditText
                    android:id="@+id/et_order_finish_delivery_code"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true"
                    android:inputType="text"
                    android:background="@null"/>
            </LinearLayout>
            <Button
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tv_order_finish_inputbox"
                android:id="@+id/btn_order_finish_confirm"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/order_finish_confirm"
                android:textColor="@color/font_white"
                android:background="@drawable/button_blue_selector"
                android:textSize="20sp"
                android:enabled="false"
                />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_order_finish_hint"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/font_white"
            android:text="@string/searching_hint"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/tv_order_finish_hint_content"
            android:layout_below="@id/tv_order_finish_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_white"
            android:text="@string/order_finish_hint_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            />
    </RelativeLayout>
</LinearLayout>